Add go back home link to posts page.

--- a/posts/templates/helloworld/posts.html
+++ b/posts/templates/helloworld/posts.html
@@ -17,5 +17,6 @@
                 <p>{{ post.text | markdown | safe }}</p>
             </div>
         {% endfor %}
+        <a href="/">Go back home</a>
     </body>
 </html>
